# pacli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: pypi-publish.yml  python-app.yml  python-publish.yml  release.yml  sonarqube.yml
docs/: developer-guidelines.md  index.html
pacli/: __init__.py  cli.py  store.py
pacli/commands/: admin.py  ai.py  backup.py  secrets.py  ssh.py  web.py
pacli/web/: app.py  ssh_handler.py
pacli/web/static/: app.js  ssh_terminal.js  style.css
pacli/web/templates/: index.html
tests/: test_command_helpers.py  test_commands_web.py  test_core_utils.py  test_store.py  test_web_app.py
